RESOLVED FIXED149462
ASSERTION FAILED: !m_committedWidth in WebCore::LineWidth::fitBelowFloats
https://bugs.webkit.org/show_bug.cgi?id=149462
Summary ASSERTION FAILED: !m_committedWidth in WebCore::LineWidth::fitBelowFloats
Renata Hodovan
Reported 2015-09-22 08:54:19 PDT
Created attachment 261745 [details] Test Load this with debug WebKit: <title>aaaaaaaaaaaaaaaaaaaa</title> <style> * { display: inline; margin-right: -518px; max-width: 1ex; } </style> Backtrace: ASSERTION FAILED: !m_committedWidth ../../Source/WebCore/rendering/line/LineWidth.cpp(197) : void WebCore::LineWidth::fitBelowFloats(bool) (gdb) bt #0 0x00007fffec64eab6 in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 #1 0x00007ffff350e8f6 in WebCore::LineWidth::fitBelowFloats (this=0x7fffffffac58, isFirstLine=true) at ../../Source/WebCore/rendering/line/LineWidth.cpp:197 #2 0x00007ffff3507a5a in WebCore::BreakingContext::handleText (this=0x7fffffffab90, wordMeasurements=..., hyphenated=@0x7fffffffae88: false, consecutiveHyphenatedLines=@0x7fffffffad18: 0) at ../../Source/WebCore/rendering/line/BreakingContext.h:867 #3 0x00007ffff3502284 in WebCore::LineBreaker::nextLineBreak (this=0x7fffffffae80, resolver=..., lineInfo=..., layoutState=..., renderTextInfo=..., lastFloatFromPreviousLine=0x0, consecutiveHyphenatedLines=0, wordMeasurements=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:110 #4 0x00007ffff3303555 in WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange (this=0x7fffd5bdf730, layoutState=..., resolver=..., cleanLineStart=..., cleanLineBidiStatus=..., consecutiveHyphenatedLines=0) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1261 #5 0x00007ffff3303122 in WebCore::RenderBlockFlow::layoutRunsAndFloats (this=0x7fffd5bdf730, layoutState=..., hasInlineChild=true) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1214 #6 0x00007ffff3305a6c in WebCore::RenderBlockFlow::layoutLineBoxes (this=0x7fffd5bdf730, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1644 #7 0x00007ffff32e2ebd in WebCore::RenderBlockFlow::layoutInlineChildren (this=0x7fffd5bdf730, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:651 #8 0x00007ffff32e2203 in WebCore::RenderBlockFlow::layoutBlock (this=0x7fffd5bdf730, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:483 #9 0x00007ffff32b5922 in WebCore::RenderBlock::layout (this=0x7fffd5bdf730) at ../../Source/WebCore/rendering/RenderBlock.cpp:926 #10 0x00007ffff32e3284 in WebCore::RenderBlockFlow::layoutBlockChild (this=0x7fffd5ae8228, child=..., marginInfo=..., previousFloatLogicalBottom=..., maxFloatLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:709 #11 0x00007ffff32e2dc3 in WebCore::RenderBlockFlow::layoutBlockChildren (this=0x7fffd5ae8228, relayoutChildren=true, maxFloatLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:632 #12 0x00007ffff32e2227 in WebCore::RenderBlockFlow::layoutBlock (this=0x7fffd5ae8228, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:485 #13 0x00007ffff32b5922 in WebCore::RenderBlock::layout (this=0x7fffd5ae8228) at ../../Source/WebCore/rendering/RenderBlock.cpp:926 #14 0x00007ffff34cbc39 in WebCore::RenderView::layoutContent (this=0x7fffd5ae8228, state=...) at ../../Source/WebCore/rendering/RenderView.cpp:253 #15 0x00007ffff34cc32c in WebCore::RenderView::layout (this=0x7fffd5ae8228) at ../../Source/WebCore/rendering/RenderView.cpp:378 #16 0x00007ffff2fe43bd in WebCore::FrameView::layout (this=0x7fffd5811000, allowSubtree=true) at ../../Source/WebCore/page/FrameView.cpp:1409 #17 0x00007ffff29175c6 in WebCore::Document::implicitClose (this=0x7fffd5826140) at ../../Source/WebCore/dom/Document.cpp:2699 #18 0x00007ffff2e79385 in WebCore::FrameLoader::checkCallImplicitClose (this=0x7fffd5aef098) at ../../Source/WebCore/loader/FrameLoader.cpp:891 #19 0x00007ffff2e790bc in WebCore::FrameLoader::checkCompleted (this=0x7fffd5aef098) at ../../Source/WebCore/loader/FrameLoader.cpp:837 #20 0x00007ffff2e78e2c in WebCore::FrameLoader::finishedParsing (this=0x7fffd5aef098) at ../../Source/WebCore/loader/FrameLoader.cpp:758 #21 0x00007ffff29215fa in WebCore::Document::finishedParsing (this=0x7fffd5826140) at ../../Source/WebCore/dom/Document.cpp:4898 #22 0x00007ffff2cccb33 in WebCore::HTMLConstructionSite::finishedParsing (this=0x7fffd5af7920) at ../../Source/WebCore/html/parser/HTMLConstructionSite.cpp:404 #23 0x00007ffff2d0c38a in WebCore::HTMLTreeBuilder::finished (this=0x7fffd5af7900) at ../../Source/WebCore/html/parser/HTMLTreeBuilder.cpp:2937 #24 0x00007ffff2cd5c90 in WebCore::HTMLDocumentParser::end (this=0x7fffd58165c0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:402 #25 0x00007ffff2cd5d5e in WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd (this=0x7fffd58165c0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:411 #26 0x00007ffff2cd497b in WebCore::HTMLDocumentParser::prepareToStopParsing (this=0x7fffd58165c0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:132 #27 0x00007ffff2cd5d95 in WebCore::HTMLDocumentParser::attemptToEnd (this=0x7fffd58165c0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:423 #28 0x00007ffff2cd5e43 in WebCore::HTMLDocumentParser::finish (this=0x7fffd58165c0) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:451 #29 0x00007ffff2e68c78 in WebCore::DocumentWriter::end (this=0x7fffd58360a0) at ../../Source/WebCore/loader/DocumentWriter.cpp:247 #30 0x00007ffff2e5264a in WebCore::DocumentLoader::finishedLoading (this=0x7fffd5836000, finishTime=0) at ../../Source/WebCore/loader/DocumentLoader.cpp:430 #31 0x00007ffff2e523a8 in WebCore::DocumentLoader::notifyFinished (this=0x7fffd5836000, resource=0x7fffd580f9c0) at ../../Source/WebCore/loader/DocumentLoader.cpp:377 #32 0x00007ffff2f10f7d in WebCore::CachedResource::checkNotify (this=0x7fffd580f9c0) at ../../Source/WebCore/loader/cache/CachedResource.cpp:297 #33 0x00007ffff2f1108c in WebCore::CachedResource::finishLoading (this=0x7fffd580f9c0) at ../../Source/WebCore/loader/cache/CachedResource.cpp:313 #34 0x00007ffff2f0d28a in WebCore::CachedRawResource::finishLoading (this=0x7fffd580f9c0, data=0x7fffd5bfde80) at ../../Source/WebCore/loader/cache/CachedRawResource.cpp:103 #35 0x00007ffff2ebd812 in WebCore::SubresourceLoader::didFinishLoading (this=0x7fffd5836c00, finishTime=0) at ../../Source/WebCore/loader/SubresourceLoader.cpp:372 #36 0x00007ffff2eb828b in WebCore::ResourceLoader::didFinishLoading (this=0x7fffd5836c00, finishTime=0) at ../../Source/WebCore/loader/ResourceLoader.cpp:631 #37 0x00007ffff38e70f6 in WebCore::readCallback (asyncResult=0x8dc9b0, data=0x7fffd5bb7300) at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:1340 #38 0x00007fffe945796a in async_ready_callback_wrapper (source_object=0xa359b0, res=0x8dc9b0, user_data=0x7fffd5bb7300) at ginputstream.c:529 #39 0x00007fffe947d453 in g_task_return_now (task=0x8dc9b0) at gtask.c:1088 #40 0x00007fffe947d489 in complete_in_idle_cb (task=0x8dc9b0) at gtask.c:1102 #41 0x00007fffe8eb7a9d in g_main_dispatch (context=0x492400) at gmain.c:3122 #42 g_main_context_dispatch (context=context@entry=0x492400) at gmain.c:3737 #43 0x00007fffe8eb7e70 in g_main_context_iterate (context=0x492400, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3808 #44 0x00007fffe8eb8192 in g_main_loop_run (loop=0x584b40) at gmain.c:4002 #45 0x00007ffff406313f in WTF::RunLoop::run () at ../../Source/WTF/wtf/glib/RunLoopGLib.cpp:67 #46 0x00007ffff2300a23 in WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebProcessMain> (argc=2, argv=0x7fffffffd5b8) at ../../Source/WebKit2/Shared/unix/ChildProcessMain.h:61 #47 0x00007ffff2300880 in WebKit::WebProcessMainUnix (argc=2, argv=0x7fffffffd5b8) at ../../Source/WebKit2/WebProcess/gtk/WebProcessMainGtk.cpp:77 #48 0x00000000004008da in main (argc=2, argv=0x7fffffffd5b8) at ../../Source/WebKit2/WebProcess/EntryPoint/unix/WebProcessMain.cpp:44
Attachments
Test (125 bytes, text/html)
2015-09-22 08:54 PDT, Renata Hodovan
no flags
Test reduction (150 bytes, text/html)
2016-08-31 15:44 PDT, alan
no flags
Test reduction (156 bytes, text/html)
2016-08-31 16:30 PDT, alan
no flags
Patch (4.70 KB, patch)
2016-09-01 20:14 PDT, alan
no flags
Patch (8.29 KB, patch)
2016-09-02 13:29 PDT, alan
no flags
Brent Fulgham
Comment 1 2016-08-04 17:21:55 PDT
This reproduces under r204037.
Radar WebKit Bug Importer
Comment 2 2016-08-04 17:23:55 PDT
alan
Comment 3 2016-08-31 15:44:47 PDT
Created attachment 287554 [details] Test reduction
alan
Comment 4 2016-08-31 16:30:35 PDT
Created attachment 287560 [details] Test reduction
alan
Comment 5 2016-09-01 20:14:58 PDT
alan
Comment 6 2016-09-02 13:29:58 PDT
Dave Hyatt
Comment 7 2016-09-02 13:50:05 PDT
Comment on attachment 287808 [details] Patch r=me
WebKit Commit Bot
Comment 8 2016-09-02 14:52:08 PDT
Comment on attachment 287808 [details] Patch Clearing flags on attachment: 287808 Committed r205374: <http://trac.webkit.org/changeset/205374>
WebKit Commit Bot
Comment 9 2016-09-02 14:52:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.